Added Product Listing Page

--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
       </div>
       <div class="landing-section mt-16 flex-center">
         <div>
-          <a href="/html/saddle-bags.html">
+          <a href="/html/luggage.html">
             <figure class="avatar">
               <img src="/images/saddle-bags.jpg" alt="saddle-bags" />
             </figure>
-            <p class="category mt-8 fs-8">Saddle Bags</p>
+            <p class="category mt-8 fs-8">Luggage</p>
           </a>
         </div>
         <div>
-          <a href="/html/saddle-bags.html">
+          <a href="/html/riding-gears.html">
             <figure class="avatar">
               <img
                 src="/images/Riding Gear.jpg"
