--- a/html/riding-gears.html
+++ b/html/riding-gears.html
@@ -91,16 +91,28 @@
             <input
               class="ratings-slider"
               type="range"
-              id="ratings"
-              name="ratings"
-              min="0"
-              max="5"
+              list="tickmarks"
             />
-            <label for="ratings"></label>
+            <datalist id="tickmarks">
+              <option value="0" label="0"></option>
+              <option value="10"></option>
+              <option value="20" label="1"></option>></option>
+              <option value="30"></option>
+              <option value="40" label="2"></option>></option>
+              <option value="50"></option>
+              <option value="60" label="3"></option>></option>
+              <option value="70"></option>
+              <option value="80" label="4"></option>></option>
+              <option value="90"></option>
+              <option value="100" label="5"></option>
+            </datalist>
           </div>
           <div class="fs-8 m-8 flex justify-between">
+            <span>0</span>
             <span>1</span>
+            <span>2</span>
             <span>3</span>
+            <span>4</span>
             <span>5</span>
           </div>
         </div>
