--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="/index.html">Login</a>
           </li>
           <li class="nav-item fs-7 mx-8">
-            <a href="/html/list.html">
+            <a href="/html/cart.html">
               <i class="fas fa-cart-plus"></i>
             </a>
           </li>
