--- a/html/luggage.html
+++ b/html/luggage.html
@@ -25,6 +25,9 @@
             <a href="/html/list.html">Login</a>
           </li>
           <li class="nav-item fs-7 mx-8">
+            <a href="/html/wishlist.html">
+              <i class="far fa-heart fa-xl mr-4"></i>
+            </a>
             <a href="/html/cart.html">
               <i class="fas fa-cart-plus"></i>
             </a>
