--- a/html/cart.html
+++ b/html/cart.html
@@ -23,7 +23,7 @@
         </div>
         <ul class="flex-col text-center">
           <li class="fs-7 mx-8">
-            <a href="/html/list.html">Login</a>
+            <a href="/html/log.html">Login</a>
           </li>
           <li class="nav-item fs-7 mx-8">
             <a href="/html/wishlist.html">
