--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <ul class="flex-col text-center">
           <li class="fs-7 mx-8">
-            <a href="/index.html">Login</a>
+            <a href="/html/log.html">Login</a>
           </li>
           <li class="nav-item fs-7 mx-8">
             <a href="/html/wishlist.html">
